# ironclaw

./: .env.example  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.reborn  FEATURE_PARITY.md  README.md  deny.toml  providers.json  railway.reborn.toml
crates/ironclaw_agent_loop/: Cargo.toml
crates/ironclaw_agent_loop/src/: executor.rs  lib.rs  state.rs
crates/ironclaw_agent_loop/tests/: deferred_followups.rs  safety_nets.rs  strategy_interactions.rs
crates/ironclaw_approvals/: AGENTS.md  Cargo.toml
crates/ironclaw_approvals/src/: capability_permission.rs  lib.rs  policy.rs
crates/ironclaw_auth/: Cargo.toml
crates/ironclaw_auth/src/: fakes.rs  google_provider.rs  lib.rs  provider.rs
crates/ironclaw_first_party_extensions/: Cargo.toml
crates/ironclaw_first_party_extensions/src/: lib.rs
crates/ironclaw_first_party_extensions/tests/: gsuite_core.rs
crates/ironclaw_hooks_postgres/: AGENTS.md  Cargo.toml
crates/ironclaw_hooks_postgres/migrations/: V1__predicate_state.sql
crates/ironclaw_hooks_postgres/src/: backend.rs  hashing.rs  lib.rs  schema.rs
crates/ironclaw_hooks_postgres/tests/: predicate_state_postgres_adversarial.rs  predicate_state_postgres_contract.rs
crates/ironclaw_host_runtime/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_host_runtime/src/: extension_contracts.rs  first_party.rs  invocation_services.rs  lib.rs  memory_context.rs  obligations.rs  production.rs  sandbox_process.rs  services.rs  turn_scheduler.rs
crates/ironclaw_host_runtime/tests/: builtin_obligation_handler_contract.rs  first_party_builtin_tools.rs  first_party_runtime_contract.rs  github_wasm_runtime_contract.rs  host_api_contract_composition.rs  host_runtime_contract.rs  host_runtime_persistent_approvals_contract.rs  host_runtime_services_contract.rs  memory_prompt_context.rs  obligation_services_composition_contract.rs  reborn_e2e_gate.rs  runtime_http_egress_contract.rs  tool_surface_contract.rs  turn_scheduler_contract.rs
crates/ironclaw_loop_support/: AGENTS.md  Cargo.toml
crates/ironclaw_loop_support/src/: cancellation_port.rs  capability_allow_set.rs  capability_port.rs  capability_surface_filter.rs  identity_context.rs  input_port.rs  input_queue.rs  lib.rs  skill_context.rs  subagent_spawn_port.rs  turn_event_publisher.rs
crates/ironclaw_loop_support/tests/: host_capability_port_composition.rs  thread_loop_support_contract.rs
crates/ironclaw_mcp/: AGENTS.md  Cargo.toml
crates/ironclaw_mcp/src/: lib.rs
crates/ironclaw_mcp/tests/: mcp_adapter_contract.rs
crates/ironclaw_memory/: AGENTS.md  Cargo.toml
crates/ironclaw_memory/src/: backend.rs  embedding.rs  filesystem.rs  indexer.rs  lib.rs  path.rs  safety.rs
crates/ironclaw_memory/tests/: e2e_hybrid_search.rs  e2e_scope_isolation_safety.rs  reborn_native_filesystem_vertical_integration.rs  reborn_native_libsql_repository_contract.rs
crates/ironclaw_network/: AGENTS.md  Cargo.toml
crates/ironclaw_network/src/: egress.rs  error.rs  lib.rs  policy.rs  resolver.rs  transport.rs  types.rs  url_target.rs
crates/ironclaw_network/tests/: network_http_egress_contract.rs
crates/ironclaw_product_adapter_registry/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_product_adapter_registry/src/: lib.rs
crates/ironclaw_product_adapter_registry/tests/: manifest_ingestion.rs  registry_contract.rs
crates/ironclaw_product_adapters/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_product_adapters/src/: adapter.rs  auth.rs  capabilities.rs  egress.rs  error.rs  external.rs  fakes.rs  identity.rs  inbound.rs  lib.rs  outbound.rs  projection.rs  redaction.rs  workflow.rs
crates/ironclaw_product_adapters/tests/: product_adapter_contract.rs
crates/ironclaw_reborn_cli/: AGENTS.md  Cargo.toml
crates/ironclaw_reborn_cli/src/: cli.rs  context.rs  main.rs  operator_env.rs
crates/ironclaw_reborn_cli/tests/: smoke.rs
crates/ironclaw_reborn_composition/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_composition/src/: approval_test_support.rs  auth.rs  auth_prompt.rs  automation.rs  available_extensions.rs  communication_context.rs  error.rs  extension_installation_store.rs  extension_lifecycle.rs  extension_lifecycle_command.rs  factory.rs  google_oauth.rs  input.rs  lib.rs  llm_config_service.rs  llm_key_store.rs  local_dev_authorization.rs  local_dev_capability_policy.rs  local_dev_capability_policy.toml  local_dev_mounts.rs  local_runtime_profile.rs  nearai_login_serve.rs  nearai_mcp.rs  oauth_dcr.rs  openai_compat_serve.rs  outbound_preferences.rs  product_auth_serve.rs  production_runtime_policy.rs  profile.rs  profile_approval_authorization.rs  projection.rs  readiness.rs  runtime.rs  runtime_input.rs  slack_channel_routes.rs  slack_connectable_channel.rs  slack_delivery.rs  slack_egress.rs  slack_host_beta.rs  slack_host_state.rs  (+6 more)
crates/ironclaw_reborn_composition/tests/: auth_callbacks.rs  budget_approval_e2e.rs  budget_e2e.rs  facade_factory.rs  gsuite.rs  libsql_substrate.rs  postgres_substrate.rs  product_live_adapters.rs  profile_acceptance.rs  runtime.rs  third_party_hook_projection.rs  trigger_poller_e2e.rs  webui_v2_e2e.rs  webui_v2_product_auth.rs  webui_v2_product_auth_4201.rs  webui_v2_serve.rs
crates/ironclaw_reborn_identity/: Cargo.toml
crates/ironclaw_reborn_identity/src/: filesystem_store.rs  key.rs  lib.rs
crates/ironclaw_reborn_openai_compat_storage/: Cargo.toml
crates/ironclaw_reborn_openai_compat_storage/src/: lib.rs
crates/ironclaw_reborn_openai_compat_storage/tests/: ref_store_contract.rs
crates/ironclaw_reborn_webui_ingress/: CLAUDE.md  Cargo.toml
crates/ironclaw_reborn_webui_ingress/src/: lib.rs
crates/ironclaw_reborn_webui_ingress/tests/: google_oauth_routes.rs  serve_loop.rs  session_round_trip.rs
crates/ironclaw_run_state/: AGENTS.md  CLAUDE.md  Cargo.toml
crates/ironclaw_run_state/src/: db.rs  lib.rs
crates/ironclaw_scripts/: AGENTS.md  Cargo.toml
crates/ironclaw_telegram_v2_adapter/: Cargo.toml
crates/ironclaw_triggers/: Cargo.toml
crates/ironclaw_wasm/: AGENTS.md  Cargo.toml
crates/ironclaw_wasm_product_adapters/: Cargo.toml
(+633 files in other folders)
