[package]
name = "ironclaw_approvals"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
ironclaw_authorization = { path = "../ironclaw_authorization" }
ironclaw_events = { path = "../ironclaw_events" }
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_run_state = { path = "../ironclaw_run_state" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
