[package]
name = "ironclaw_auth"
version = "0.1.0"
edition = "2024"
# Keep in sync with the workspace-level package.rust-version.
rust-version = "1.92"
description = "Product-facing Reborn auth contracts and fake services"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
secrecy = { version = "0.10", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
subtle = "2"
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt"] }
