[package]
name = "ironclaw_hooks_postgres"
version = "0.1.0"
edition = "2024"
publish = false
description = "Durable PostgreSQL-backed PredicateStateBackend for the reborn hook framework (durable backend PR 2/4)."
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"

[features]
default = []
# The Postgres backend itself. Mirrors the per-crate `postgres` feature gate
# used by `ironclaw_reborn_event_store` / `ironclaw_filesystem`: nothing in
# this crate compiles a DB dependency unless `postgres` is on.
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres"]

[dependencies]
async-trait = "0.1"
blake3 = "1"
chrono = { version = "0.4", features = ["serde"] }
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_hooks = { path = "../ironclaw_hooks" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
rust_decimal = { version = "1", features = ["serde", "serde-with-str", "db-tokio-postgres"] }
thiserror = "2"
tokio-postgres = { version = "0.7", optional = true, features = ["with-chrono-0_4"] }
tracing = "0.1"

[dev-dependencies]
# `contract-tests` exposes the trait-level contract harness from
# `ironclaw_hooks` so this crate's Postgres impl runs the SAME suite the
# in-memory backend runs (proven-by-construction, not per-impl).
ironclaw_hooks = { path = "../ironclaw_hooks", features = ["contract-tests"] }
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "sync"] }
uuid = { version = "1", features = ["v4"] }
