[package]
name = "ironclaw_mcp"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
futures-util = "0.3"
ironclaw_extensions = { path = "../ironclaw_extensions" }
ironclaw_host_api = { path = "../ironclaw_host_api" }
ironclaw_resources = { path = "../ironclaw_resources" }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt"] }
