[package]
name = "ironclaw_memory"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Memory document service adapters for IronClaw Reborn"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[features]
default = []
postgres = ["dep:deadpool-postgres", "dep:tokio-postgres", "dep:pgvector"]
libsql = ["dep:libsql"]
# Conditional gate for substrate-level regression tests that anticipate
# specific guards beyond what #3180 itself delivers: min_score-after-
# normalization, deterministic tiebreaking, `ensure_path_matches_context`
# / `ensure_scope_matches_context` checks, and `.system/engine/
# orchestrator/*` protected-path registration. The followup PR(s) that
# implement these must enable `pr3180-ready` in their merge commit so
# the gated tests run in CI on the merge-queue branch.
#
# Empirical note (2026-05-12): on `reborn-integration` HEAD (#3180
# merged), enabling this feature surfaces ~7 test failures because the
# anticipated APIs (`ensure_path_matches_context`, deterministic
# tie-breakers, orchestrator path registration) do not exist yet. The
# gates are accurate; the substrate just isn't there yet.
pr3180-ready = []

[dependencies]
async-trait = "0.1"
deadpool-postgres = { version = "0.14", optional = true }
ironclaw_filesystem = { path = "../ironclaw_filesystem", version = "0.1.0" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
ironclaw_safety = { path = "../ironclaw_safety", version = "0.2.1" }
libsql = { version = "0.6", optional = true, default-features = false, features = ["core", "replication", "remote", "tls"] }
jsonschema = { version = "0.45", default-features = false }
pgvector = { version = "0.4", features = ["postgres"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tracing = "0.1"
tokio-postgres = { version = "0.7", features = ["with-uuid-1", "with-serde_json-1"], optional = true }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
# `rt-multi-thread` is required by the race-safety test's
# `#[tokio::test(flavor = "multi_thread", worker_threads = 2)]` —
# without it, the macro silently falls back to current-thread and
# `tokio::join!` polls cooperatively on one thread, hiding real
# preemptive races against `replace_document_chunks_if_current`
# (PR #3180 invariant 6).
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
