[package]
name = "ironclaw_network"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
async-trait = "0.1"
ironclaw_host_api = { path = "../ironclaw_host_api" }
percent-encoding = "2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots"] }
thiserror = "2"
tokio = { version = "1", features = ["rt"] }
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "time"] }
