[package]
name = "ironclaw_reborn_cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Standalone IronClaw Reborn binary"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

# Keep disabled until #3483 resolves cargo-dist tag/versioning + Windows WiX
# packaging for the standalone Reborn binary.
[package.metadata.dist]
dist = false

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.5.0"
ironclaw_reborn = { path = "../ironclaw_reborn", version = "0.1.0" }
ironclaw_reborn_config = { path = "../ironclaw_reborn_config", version = "0.1.0" }

[[bin]]
name = "ironclaw-reborn"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
