[package]
name = "ironclaw_reborn_identity"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
description = "Canonical Reborn identity resolver: maps OAuth and external-channel actors to stable UserIds"
authors = ["NEAR AI <support@near.ai>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/nearai/ironclaw"
repository = "https://github.com/nearai/ironclaw"
publish = false

[dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = "0.4"
ironclaw_filesystem = { path = "../ironclaw_filesystem" }
ironclaw_host_api = { path = "../ironclaw_host_api", version = "0.1.0" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
